dont show startup editor in vscode

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -2,6 +2,7 @@
     // "files.exclude": {
     //     "**/.*": true
     // },
+    "workbench.startupEditor": "none",
     "editor.cursorStyle": "line",
     "editor.formatOnSave": true,
     "editor.minimap.enabled": false,
